--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -1,6 +1,6 @@
 /* General */
 body {
-    background-color: #f9f9f9;
+    background-color: #f3e3c260;
     font-family: 'Poppins', sans-serif;
 }
 
